[package]
name = "edtech_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "edtech_newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"  
tokio = "1.25.0"   

[dev-dependencies]
actix-rt = "2.8.0"
reqwest = "0.11.14"
cargo-expand = "1.0"

[[test]]
name = "health_check"
path = "src/tests/health_check.rs"

